fix : update pagination button visiblity + margin gap listpost component

--- a/src/components/ListPosts/ListPosts.css
+++ b/src/components/ListPosts/ListPosts.css
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1rem 0;
+    gap: 1rem;
 }
 
 button {
